# yaqb_test

./: .env  Cargo.toml  build.rs
migrations/20151219180527/: down.sql  up.sql
src/: jsonify.rs  main.rs
src/jsonable/: compound_document.rs  document.rs  json_api_data.rs  json_apiable.rs  mod.rs  relationship_data.rs  relationship_object.rs  resource_object.rs  to_resource_object.rs
src/models/: connectable.rs  mod.rs  post.rs  user.rs
src/to_json_api/: document.rs  mod.rs  relationship_object.rs  resource_object.rs  to_json_string.rs  to_resource_object.rs
