[package]
name = "diesel_test"
version = "0.1.0"
authors = ["Mike Piccolo <mfpiccolo@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "^0.22.0", optional = true }
diesel_codegen = { path = "../diesel/diesel_codegen", default-features = false }
dotenv_codegen = { version = "^0.7.1",  optional = true }
diesel = { path = "../diesel/diesel" }
dotenv = "^0.7.1"

[dependencies]
diesel = { path = "../diesel/diesel" }
diesel_codegen = { path = "../diesel/diesel_codegen", version = "0.3.0", default-features = false, features = ["nightly"] }
dotenv = "0.7.1"
dotenv_macros = "0.7.1"
nickel = "*"
rustc-serialize = "*"
json_macros = "*"
