[package]
name = "diesel_test"
version = "0.1.0"
authors = ["Mike Piccolo <mfpiccolo@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "^0.25.0", optional = true }
diesel_codegen = { git = "https://github.com/sgrif/diesel", version = "0.4.1", default-features = false }
diesel = { git = "https://github.com/sgrif/diesel", version = "0.4.1" }
dotenv = "^0.7.1"

[dependencies]
diesel = { git = "https://github.com/sgrif/diesel", version = "0.4.1" }
diesel_codegen = { git = "https://github.com/sgrif/diesel", version = "0.4.1", default-features = false, features = ["nightly"] }
diesel_cli = { git = "https://github.com/sgrif/diesel", version = "0.4.1" }
dotenv = "0.7.1"
dotenv_macros = "0.7.1"
nickel = "*"
rustc-serialize = "*"
json_macros = "0.3.0"
serde = "0.6.11"
serde_json = "0.6.0"
serde_macros = "0.6.11"
